// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client tests MyBalance test 1`] = `
Object {
  "balance": Object {
    "ae": 59.07626208,
    "aud": 20.440000000000005,
    "grs": 2.1434619,
    "iost": 109.95052226,
    "link": 0.55112815,
    "matic": 379.47783849,
    "rcn": 16.94886527,
    "rdd": 19362.83870967,
    "trx": 230.77633157,
    "vidt": 15.79899087,
    "xrp": 1,
  },
  "status": "ok",
}
`;

exports[`Client tests orderHistory test 1`] = `
Object {
  "orders": Array [],
  "status": "ok",
}
`;

exports[`Client tests quoteSell test 1`] = `
Object {
  "quote": null,
  "status": "ok",
  "timeframe": 4,
}
`;
